...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Tools" id="keW-s1-Lsn">
                        <barButtonItem key="backBarButtonItem" title="My Tools" id="TSm-1f-xMY"/>
                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="refresh" id="nWL-Dg-S0z">
...
                                </userDefinedRuntimeAttributes>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Tool Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="SCN-Pg-D8b">
                                <rect key="frame" x="20" y="391" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        </userDefinedRuntimeAttributes>
                    </view>
                    <navigationItem key="navigationItem" title="Add Tool" id="TOP-OL-awA">
                        <barButtonItem key="backBarButtonItem" title="Cancel" id="aJ5-An-hRE"/>
                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="uV1-dr-ZGF">
                            <connections>
...
                    <navigationItem key="navigationItem" title="Power Tool Sharing" id="ACK-Fp-8DB"/>
                    <connections>
                        <segue destination="Ehg-dE-sXp" kind="modal" identifier="Register" id="7mZ-dw-1tk"/>
                        <segue destination="Xy0-Pk-BKC" kind="modal" identifier="Login" id="kMy-yV-rqO"/>
                    </connections>
                </tableViewController>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your Email Id" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="luN-Pv-m6m">
                                <rect key="frame" x="20" y="80" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" id="vgk-qO-LEj">
                                <rect key="frame" x="20" y="120" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your First Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="cAs-fy-tme">
                                <rect key="frame" x="20" y="80" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Last Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="A2O-AU-MEO">
                                <rect key="frame" x="20" y="120" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="next"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose a Strong Password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" id="iq9-kJ-uHZ">
                                <rect key="frame" x="20" y="240" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="yes" spellCheckingType="no" returnKeyType="next" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Re-enter the Above Password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" id="ab3-8H-Mrf">
                                <rect key="frame" x="20" y="280" width="280" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                <state key="normal" title="Join">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Mobile Number" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="u9m-4N-GuY">
                                <rect key="frame" x="63" y="160" width="237" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="next"/>
                            </textField>
