...
    NSString *toolStatus = [self.toolDetails valueForKey:@"status"];
    
    if ([toolStatus isEqualToString:@"AVAILABLE"]) {
        self.toolStatusTextLabel.text = @"Available";
        self.toolStatusTextLabel.textColor = [UIColor blueColor];
        
        [self.changeToolStatusButton setTitle:@"Mark as Unavailable" forState:UIControlStateNormal];
        
        [self.view setBackgroundColor:[[UIColor alloc] initWithRed:1 green:1 blue:1 alpha:1]];
        
    } else {
        self.toolStatusTextLabel.text = @"Unavailable";
        self.toolStatusTextLabel.textColor = [UIColor redColor];
        
        [self.changeToolStatusButton setTitle:@"Mark as Available" forState:UIControlStateNormal];
        
        [self.view setBackgroundColor:[[UIColor alloc] initWithRed:1 green:0.8 blue:0.8 alpha:1]];
    }
...
    dispatch_after(dispatch_time(DISPATCH_TIME_NOW, duration * NSEC_PER_SEC), dispatch_get_main_queue(), ^{
        [toast dismissWithClickedButtonIndex:0 animated:YES];
    });
}

- (void)showError:(NSString*)errorMsg {
    NSString *msgTitle = @"Error Message";
    
    UIAlertView *error = [[UIAlertView alloc] initWithTitle:msgTitle message:errorMsg delegate:nil cancelButtonTitle:@"Dismiss" otherButtonTitles:nil, nil];
    
    [error show];
}

/*
#pragma mark - Navigation
...
