...
    // Uncomment the following line to display an Edit button in the navigation bar for this view controller.
    // self.navigationItem.rightBarButtonItem = self.editButtonItem;
    
    self.operationDict = [[NSDictionary alloc] initWithObjectsAndKeys:
                          [NSNumber numberWithInt:1], @"Login",
                          [NSNumber numberWithInt:2], @"Register",
                          [NSNumber numberWithInt:3], @"Logout",
                          [NSNumber numberWithInt:4], @"FAQ",
                          [NSNumber numberWithInt:5], @"Help",
                          [NSNumber numberWithInt:6], @"Information", nil];
    
    NSDictionary *userDetails = [[NSUserDefaults standardUserDefaults] objectForKey:@"UserDetails"];
    
...
