...
    tap.numberOfTouchesRequired = 1;
    
    [self.toolImageView addGestureRecognizer:tap];
}

- (void) imageTapped {
    UIActionSheet *uiActionSheet = [[UIActionSheet alloc] initWithTitle:nil delegate:self cancelButtonTitle:@"Cancel" destructiveButtonTitle:nil otherButtonTitles:@"Take Photo", @"Choose Photo", nil];
    
    [uiActionSheet showInView:self.view];
}

- (void) burnTextIntoImage:(NSString *)text :(UIImage *)img {
    
...
